[package]
name = "ipwatch"
version = "0.1.0"
authors = ["Mike Schmidt <schmidmt@gmail.com>"]
edition = "2018"
description = "A tool for restarting services on IP change."
repository = "https://github.com/schmidmt/ipwatch"
license = "MIT"



[dependencies]
futures = "0.1.25"
env_logger = "0.6.0"
log = "0.4.6"
tokio = "0.1.13"
tokio-reactor = "0.1.7"
failure = "0.1.5"
clap = "2.32.0"
subprocess = "0.1.18"
regex = "1"
netlink-sys = { version = "0.1", features = ["tokio_support"]}
netlink-packet = { version = "0.1", features = ["rtnetlink"]}
netlink-proto = { version = "0.1", features = ["rtnetlink"] }
